CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} LIB_SRC)
ADD_LIBRARY(fault SHARED ${LIB_SRC})
ADD_LIBRARY(fault_static STATIC ${LIB_SRC})
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
SET(CMAKE_C_FLAGS "-Wall -g -finstrument-functions -pg -ftest-coverage -fprofile-arcs -funwind-tables -rdynamic")
SET_TARGET_PROPERTIES (fault_static PROPERTIES OUTPUT_NAME fault)
SET_TARGET_PROPERTIES (fault PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES (fault PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES (fault PROPERTIES VERSION 1.1 SOVERSION 1)
TARGET_LINK_LIBRARIES(fault dl pthread m)
# install (TARGETS fault fault_static 
#     LIBRARY DESTINATION ${PROJECT_BINARY_DIR}/lib
#     ARCHIVE DESTINATION ${PROJECT_BINARY_DIR}/lib)
INSTALL (FILES *.h DESTINATION ${PROJECT_BINARY_DIR}/include/fault)
